# Introduction-to-Image-Understanding-

./: README.md
app/: CMakeLists.txt  image_test.cpp
include/ceng391/: image.hpp
src/: CMakeLists.txt  image.cpp
